crates/pamoja-ffi/include/pamoja.h

// The result of a fallible pamoja call.
//
// A return of [`PamojaStatus::Ok`] means success; any other value indicates a
// failure whose description is available from [`pamoja_last_error_message`] on
// the same thread.
typedef enum {
  // The call succeeded.
  PamojaStatus_Ok = 0,
  // A transport-level failure while connecting, sending, or receiving.
  PamojaStatus_Transport = 1,
  // A device or peripheral input/output operation failed.
  PamojaStatus_Io = 2,
  // A payload could not be encoded or decoded.
  PamojaStatus_Codec = 3,
  // The operation targeted a resource that is closed or disconnected.
  PamojaStatus_Closed = 4,
  // The requested capability is not compiled into this build.
  PamojaStatus_Unsupported = 5,
  // An argument was null or otherwise invalid, for example non-UTF-8 text.
  PamojaStatus_InvalidArgument = 6,
  // A failure that does not map onto a more specific status.
  PamojaStatus_Other = 7,
  // A Rust panic was caught at the boundary; the call had no effect.
  PamojaStatus_Panic = 8,
  // A security check failed, such as an invalid identity or a bad signature.
  PamojaStatus_Auth = 9,
} PamojaStatus;
// An opaque handle to a byte buffer owned by the caller.
//
// Calls that produce a variable-length result hand back one of these rather than
// writing into a caller buffer, so the caller never has to guess a size. Read it
// with [`pamoja_buffer_data`] and [`pamoja_buffer_len`], then release it with
// [`pamoja_buffer_free`].
typedef struct PamojaBuffer PamojaBuffer;
// An opaque handle to a parsed uplink event.
//
// Release it with [`pamoja_chirpstack_uplink_free`].
typedef struct PamojaChirpstackUplink PamojaChirpstackUplink;
// An owned, null-terminated UTF-8 string produced by the library.
//
// Some calls build a string rather than borrowing one that already lives inside
// a handle: a canonical key expression, a DDS topic name, a profile serialized
// to JSON. Those return this, and the caller releases it with
// [`pamoja_string_free`].
typedef struct PamojaString PamojaString;
// The scalar fields of an uplink event, read in one call.
typedef struct {
  // The device's address, meaningful when `has_dev_addr` is `1`.
  uint32_t dev_addr;
  // The uplink frame counter.
  uint32_t fcnt;
  // The carrier it was heard on, in hertz, meaningful when `has_frequency` is `1`.
  uint32_t frequency_hz;
  // How many gateways heard it.
  uint32_t reception_count;
  // The device EUI, most-significant byte first.
  uint8_t dev_eui[8];
  // `1` when the event names the device's address.
  uint8_t has_dev_addr;
  // `1` when the device had adaptive data rate on.
  uint8_t adr;
  // The data rate, as the region numbers them.
  uint8_t data_rate;
  // `1` when the frame carried an application port.
  uint8_t has_fport;
  // The application port.
  uint8_t fport;
  // `1` for a confirmed uplink.
  uint8_t confirmed;
  // `1` when the event names the carrier.
  uint8_t has_frequency;
} PamojaChirpstackUplinkSummary;
// One gateway that heard an uplink.
typedef struct {
  // The received signal strength, in dBm.
  int32_t rssi_dbm;
  // The signal-to-noise ratio, in dB.
  float snr_db;
  // The gateway's EUI, most-significant byte first.
  uint8_t gateway[8];
} PamojaChirpstackReception;
// Reads an uplink event from the JSON ChirpStack published.
//
// # Arguments
//
// * `text` - the MQTT message's payload, UTF-8 JSON.
// * `text_len` - its length.
// * `out_uplink` - receives the event.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_uplink` set to a handle the caller must release
// with [`pamoja_chirpstack_uplink_free`].
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if a pointer is null, and [`PamojaStatus::Codec`]
// for text that is not a JSON object, an event with no device EUI, or a field that does not
// read as what it should, with the field named by `pamoja_last_error`.
//
// # Safety
//
// `text` must point to `text_len` readable bytes when that is non-zero, and `out_uplink` must
// be writable.
PamojaStatus pamoja_chirpstack_uplink_parse(const uint8_t *text,
                                            uintptr_t text_len,
                                            PamojaChirpstackUplink **out_uplink);
// Releases an uplink event handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `uplink` must be a handle from [`pamoja_chirpstack_uplink_parse`] that has not already been
// freed, or null.
void pamoja_chirpstack_uplink_free(PamojaChirpstackUplink *uplink);
// Reads the scalar fields of an uplink event.
//
// # Arguments
//
// * `uplink` - the event.
// * `out_summary` - receives the fields.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if either pointer is null.
//
// # Safety
//
// `uplink` must be a live handle and `out_summary` writable.
PamojaStatus pamoja_chirpstack_uplink_summary(const PamojaChirpstackUplink *uplink,
                                              PamojaChirpstackUplinkSummary *out_summary);
// Reads one of an uplink event's text fields.
//
// # Arguments
//
// * `uplink` - the event.
// * `field` - one of the `PAMOJA_CHIRPSTACK_*` field constants.
//
// # Returns
//
// The text, which the caller releases with [`pamoja_string_free`](crate::pamoja_string_free);
// an empty string for a field the event left out; or null for a time the event left out, a
// null handle, or a field constant that names nothing.
//
// # Safety
//
// `uplink` must be a live handle or null.
PamojaString *pamoja_chirpstack_uplink_text(const PamojaChirpstackUplink *uplink, uint8_t field);
// Copies out the application payload an uplink carried, decoded from base64.
//
// # Arguments
//
// * `uplink` - the event.
// * `out_data` - receives the payload, empty when the event carried none.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_data` set to a buffer the caller releases with
// [`pamoja_buffer_free`](crate::pamoja_buffer_free).
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if either pointer is null.
//
// # Safety
//
// `uplink` must be a live handle and `out_data` writable.
PamojaStatus pamoja_chirpstack_uplink_data(const PamojaChirpstackUplink *uplink,
                                           PamojaBuffer **out_data);
// Reads one gateway that heard an uplink.
//
// # Arguments
//
// * `uplink` - the event.
// * `index` - the reception's position, below the count the summary reports.
// * `out_reception` - receives the reception.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if a pointer is null or `index` is past the end.
//
// # Safety
//
// `uplink` must be a live handle and `out_reception` writable.
PamojaStatus pamoja_chirpstack_uplink_reception(const PamojaChirpstackUplink *uplink,
                                                uint32_t index,
                                                PamojaChirpstackReception *out_reception);
// Finds the gateway that heard an uplink best.
//
// # Arguments
//
// * `uplink` - the event.
// * `out_index` - receives the position of the reception with the highest signal-to-noise
//   ratio.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Errors
//
// Returns [`PamojaStatus::InvalidArgument`] if a pointer is null or the event named no
// gateway.
//
// # Safety
//
// `uplink` must be a live handle and `out_index` writable.
PamojaStatus pamoja_chirpstack_uplink_best_reception(const PamojaChirpstackUplink *uplink,
                                                     uint32_t *out_index);
// Builds the MQTT topic an application's uplink events are published on, with a wildcard in
// place of the device.
//
// # Arguments
//
// * `application_id` - the application's identifier, as ChirpStack shows it, or `+` for every
//   application's events.
//
// # Returns
//
// The topic, `application/<id>/device/+/event/up`, which the caller releases with
// [`pamoja_string_free`](crate::pamoja_string_free), or null for a null or non-UTF-8 argument.
//
// # Safety
//
// `application_id` must be a NUL-terminated string or null.
PamojaString *pamoja_chirpstack_uplink_topic(const char *application_id);